2005-10-09  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCmdIL.c:

	* generic/tclInt.h: modified the TclNSVarHashTable definition to
	not require coordination between tcl.h and tclInt.h
	* generic/tcl.h: Now unnecessary comment removed
	

2005-10-08  Miguel Sofer <msofer@users.sf.net>

	* unix/configure:
	* unix/configure.in:
	* win/configure.in: reverting last patch: pilot error.

	*** NOTE: win/configure.in patched, but autoconf NOT run.

2005-10-08  Miguel Sofer <msofer@users.sf.net>

	* unix/configure:
	* unix/configure.in:
	* win/configure.in: changes that somehow got left out of the
	2005-06-12 merge.

2005-06-12  Miguel Sofer <msofer@users.sf.net>

	*** MERGE WITH HEAD *** (tag msofer-wcodes-20050611)
	[grep for '~~~~~~' to get to HEAD's Changelog]

2005-04-16  Miguel Sofer <msofer@users.sf.net>

	*** FROM HEAD ***
	* generic/Var.c (Tcl_ArrayObjCmd - ARRAY_NAMES): fix Tcl_Obj leak
	[Bug 1084111] 

2005-04-14  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c: fix for bad stack management

2005-04-14  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCmdIL (AppendLocals):
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclProc.c:
	* generic/tclVar.c: part 5 of variable reform. Compiled local vars 
	are now (1int+1ptr).

2005-04-13  Miguel Sofer <msofer@users.sf.net>
	
	*** FROM HEAD *** 
	* generic/tclCompile.c:Commented out the functions
	TclPrintInstruction(), TclPrintObject() and TclPrintSource() when
	not debugging the compiler, as they are never called in that case.
	
	* generic/tclCompile.c:
	* generic/tclExecute.c: Commented out the code to store pointers
	to literals in INST_PUSH: it breaks TclPrintInstruction. 
	RESTORED in a second commit, when !defined(TCL_COMPILE_DEBUG).	
	
2005-04-12  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCmdIL (AppendLocals):
	* generic/tclCompile.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclProc.c:
	* generic/tclTrace.c: