@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclExecute.c,v 1.171.2.30 2005/06/13 01:46:05 msofer Exp $
+ * RCS: @(#) $Id: tclExecute.c,v 1.171.2.31 2005/10/10 17:59:38 msofer Exp $
  */
 
 #include "tclInt.h"
@@ -860,7 +860,9 @@ Tcl_ExprObj(interp, objPtr, resultPtrPtr)
 
 	TclEmitInst0(INST_DONE, &compEnv);
 	TclInitByteCodeObj(objPtr, &compEnv);
+#if VM_ENABLE_OPTIMISER
 	TclOptimiseByteCode (interp, objPtr);
+#endif
 	TclFreeCompileEnv(&compEnv);
 	codePtr = (ByteCode *) objPtr->internalRep.otherValuePtr;
 #ifdef TCL_COMPILE_DEBUG
@@ -4049,7 +4051,7 @@ TclExecuteByteCode(interp, codePtr)
 		NEXT_INST_F(0, 0);
 	    }
 	} else { /* inst is INST_LNOT or INST_LYES*/
-	    if (tPtr == &tclIntType) {
+	    if ((tPtr == &tclIntType) || (tPtr == &tclBooleanType)){
 		i = valuePtr->internalRep.longValue;
 		TRACE_WITH_OBJ(("%ld => ", i), objResultPtr);
 	    } else if (tPtr == &tclWideIntType) {
